--- a/_posts/2018-01-12-za-xiang.md
+++ b/_posts/2018-01-12-za-xiang.md
@@ -7,6 +7,6 @@ tags: 呓语集
 最近在考虑以后工作的事。
 5G将在平昌冬奥会上首秀，2018年5G的国际标准也要落定，5G于4G的网速有着极大的提高，原生应用于H5应用的优势应该会弱化，H5应用应该会成为主流，原生开发变成H5在弱网环境时的补充。未雨绸缪，这两年在技术上得学点别的东西了。
 
-恋家又爱远方，二十六七岁，人生近半，在霾都生活了4年多，感觉这个城市不包容，不好玩，世界那么大，突然想换个城市，上海、杭州之类的，也神往纽约、东京~~~but没有妹子之前，还是老老实实呆着吧T_T
+恋家又爱远方，二十六七岁，人生近半，在霾都生活了4年多，感觉这个城市不包容，不好玩，世界那么大，突然想换个城市，上海、杭州之类的，也神往纽约、东京。人生无非多遇些人多看些风景，这么几年，也该找个妹子一起得瑟了~~
 
 
