--- a/_posts/2018-02-13-eryisi.md
+++ b/_posts/2018-02-13-eryisi.md
@@ -10,7 +10,7 @@ tags: 呓语集
 
 高山流水，伯牙子期，幸运，有我爸爸一直懂我所说，知我所想。沧海横流，幸运，有我爸爸一直都相信我正直善良。  
 
-四五年前，感情受挫，携款400RMB来这大帝都混到今天，感觉自己能扛过所有风浪，但也仅仅是吸收掉自己所有的欢喜和难过，勉强维持inner peace的状态，多一丝一毫都会打破这平和，然后变的能保持微笑，却不爱讲也不爱听。我信仰着我命由我不由天，并不觉的年龄到了就该结婚，然而偶尔也有那么一刻，想有个家，想回家甩了外套，面前能有杯热茶。尴尬的是，TM不知道该找什么样的。  
+四五年前，感情受挫，携款400RMB来这大帝都混到今天，感觉自己能扛过所有风浪，但也仅仅是吸收掉自己所有的悲喜，勉强维持inner peace的状态，多一丝一毫都会打破这平和，然后变的能保持微笑，却不爱讲也不爱听。我信仰着我命由我不由天，并不觉的年龄到了就该结婚，然而偶尔也有那么一刻，想有个家，想回家甩了外套，面前能有杯热茶。尴尬的是，TM不知道该找什么样的。  
 百度颓势渐显马东敏又重出江湖的时候，不羡慕李彦宏有百度，只羡慕李彦宏有马东敏。然后就有一点点感触。我要找个什么样的人度过这后半生？也许我想找的不是对象，是良马伯乐伯牙子期。  
 .  
 .  
@@ -26,4 +26,5 @@ tags: 呓语集
 .  
 .  
 后续：丫这个博客模板的title竟然不能是数字，改成汉字才行，让我提交了七八次-----坑爹哎---
+呓语集里全是“随想”唉---就酱紫吧---想title太丫的难了----
 
